--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <!-- Bloque de seguimiento de Google Analytics 4 (GA4) -->
     <!-- INSTRUCCIONES: Reemplace 'G-XXXXXXXXXX' con su ID de Medición de GA4. -->
     <!-- Esto permitirá el seguimiento de tráfico incluso en subdominios gratuitos (ej: Netlify, GitHub Pages). -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FMZ1KX153M"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
     
-      gtag('config', 'G-XXXXXXXXXX');
+      gtag('config', 'G-FMZ1KX153M');
     </script>
     <!-- FIN Bloque de GA4 -->
     
@@ -604,3 +604,4 @@
     </script>
 </body>
 </html>
+
