--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="icon" href="https://placehold.co/32x32/4338CA/FFFFFF?text=AA" type="image/x-icon">
 
     <!-- Código de Google Analytics (GA4) - Usando ID de marcador de posición -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FMZ1KX153M"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXXX'); // Reemplazar con el ID real
+      gtag('config', 'G-FMZ1KX153M'); // Reemplazar con el ID real
     </script>
     
     <!-- Cargando Tailwind CSS -->
@@ -614,4 +614,5 @@
     </footer>
 </body>
 </html>
+
 
