--- a/politica_privacidad.html
+++ b/politica_privacidad.html
@@ -64,7 +64,7 @@
                 <svg class="w-8 h-8 mr-2 text-teal-principal" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
                 <span class="text-teal-principal">Águila</span> <span class="text-white">Azul</span>
             </div>
-            <a href="aguila_azul_landing.html" class="text-indigo-200 hover:text-teal-principal transition duration-150">Volver a la Home</a>
+            <a href="index.html" class="text-indigo-200 hover:text-teal-principal transition duration-150">Volver a la Home</a>
         </div>
     </header>
 
@@ -178,7 +178,7 @@
             
              <!-- ENLACE DE VUELTA -->
             <div class="mt-12 text-center">
-                <a href="aguila_azul_landing.html" class="inline-block px-8 py-3 text-lg font-semibold text-white bg-azul-principal rounded-xl shadow-xl hover:bg-teal-principal transition duration-300 transform hover:scale-105">
+                <a href="index.html" class="inline-block px-8 py-3 text-lg font-semibold text-white bg-azul-principal rounded-xl shadow-xl hover:bg-teal-principal transition duration-300 transform hover:scale-105">
                     Volver a la Página Principal
                 </a>
             </div>
@@ -194,4 +194,5 @@
     </footer>
 </body>
 </html>
+
 
