--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             
             <!-- Columna de Imagen (Derecha) - Imagen de niño feliz con padres -->
             <div class="hidden lg:block w-full">
-                <img src="imagenes/nino_feliz.png" 
+                <img src="imagenes/niño_feliz.png" 
                      alt="Imagen de un niño feliz jugando con sus padres, simbolizando el apego seguro y la armonía familiar." 
                      class="w-full h-auto object-cover rounded-3xl shadow-2xl border-4 border-teal-principal transform hover:scale-[1.01] transition duration-500"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/CCFBF1/4338CA?text=Vínculo+Seguro';"
@@ -614,5 +614,6 @@
     </footer>
 </body>
 </html>
+
 
 
