--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
             <!-- LOGO Águila Azul - Sustitución del icono genérico por un SVG de águila estilizada -->
             <div class="text-2xl font-extrabold text-white flex items-center">
                 <!-- Icono estilizado de Águila/Vuelo (Placeholder SVG para el logo) -->
-                <svg class="w-8 h-8 mr-2 text-teal-principal" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
+                <img src="imagenes/aguilaazulpsicologia.png"
+                    alt="Logo Águila Azul"
+                    class="w-8 h-8 mr-2 text-teal-principal" >
                 <span class="text-teal-principal">Águila</span> <span class="text-white">Azul</span>
             </div>
             
@@ -614,6 +616,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
