--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             
             <!-- Columna de Imagen (Derecha) - Imagen de niño feliz con padres -->
             <div class="hidden lg:block w-full">
-                <img src="imágenes/niño_feliz.png" 
+                <img src="imágenes/nino-feliz.png" 
                      alt="Imagen de un niño feliz jugando con sus padres, simbolizando el apego seguro y la armonía familiar." 
                      class="w-full h-auto object-cover rounded-3xl shadow-2xl border-4 border-teal-principal transform hover:scale-[1.01] transition duration-500"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/CCFBF1/4338CA?text=Vínculo+Seguro';"
@@ -616,6 +616,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
