--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <!-- LOGO Águila Azul - Sustitución del icono genérico por un SVG de águila estilizada -->
             <div class="text-2xl font-extrabold text-white flex items-center">
                 <!-- Icono estilizado de Águila/Vuelo (Placeholder SVG para el logo) -->
-                <img src="imagenes/aguilaazulpsicologia.png"
+                <img src="assets/aguilaazulpsicologia.png"
                     alt="Logo Águila Azul"
                     class="w-10 h-10 mr-2 text-teal-principal" >
                 <span class="text-teal-principal">Águila</span> <span class="text-white">Azul</span>
@@ -169,7 +169,7 @@
             
             <!-- Columna de Imagen (Derecha) - Imagen de niño feliz con padres -->
             <div class="hidden lg:block w-full">
-                <img src="imágenes/niño_feliz.png" 
+                <img src="assets/nino-feliz.png" 
                      alt="Imagen de un niño feliz jugando con sus padres, simbolizando el apego seguro y la armonía familiar." 
                      class="w-full h-auto object-cover rounded-3xl shadow-2xl border-4 border-teal-principal transform hover:scale-[1.01] transition duration-500"
                      onerror="this.onerror=null; this.src='https://placehold.co/600x400/CCFBF1/4338CA?text=Vínculo+Seguro';">
@@ -615,6 +615,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
