--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
     </section>
 
     <!-- Sección Sobre Mí -->
-    <section id="sobre-mi" class="py-16 lg:py-24 **bg-indigo-800** text-white">
+    <section id="sobre-mi" class="py-16 lg:py-24 bg-azul-principal text-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center"> 
             
             <h2 class="text-4xl font-extrabold mb-8 border-b-2 border-teal-principal pb-2 inline-block">Sobre Mí</h2>
@@ -629,6 +629,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
