--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
     </section>
 
     <!-- Sección Corazón/Propósito -->
-    <section id="corazon" class="py-16 bg-azul-fondo">
+    <section id="corazon" class="py-16 bg-azul-principal">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-4xl font-bold text-center text-azul-principal mb-4">Nuestro Corazón en Águila Azul</h2>
+            <h2 class="text-4xl font-bold text-center text-white mb-4">Nuestro Corazón en Águila Azul</h2>
             
             <div class="max-w-4xl mx-auto text-lg space-y-6 mt-8 p-6 bg-fondo-claro rounded-2xl shadow-inner text-azul-principal">
                 
@@ -615,6 +615,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
